text wrap fixed

--- a/styles/companies.css
+++ b/styles/companies.css
@@ -78,6 +78,7 @@ header {
 
 .selection-bar ul {
   display: flex;
+  flex-wrap: nowrap;
   gap: 1rem;
   overflow-x: scroll;
   list-style: none;
